# ml-lab

./: .gitignore  Makefile  README.md  feature_information_studies.ipynb  feature_information_studies.py  pyproject.toml
docs/: concepts.md  cookbook.md  experiments.md  quickstart.md
experiments/2026-06-06_roc_vs_ap/: config.yaml  run_experiment.py  run_study_imbalance.py  study_feature_info.yaml  study_imbalance.yaml
experiments/2026-06-06_roc_vs_ap/outputs/: metrics.csv  report.md
experiments/2026-06-09_embedding_pca/: README.md  config.yaml
experiments/2026-06-09_embedding_pca/outputs/: pca_thresholds.csv  site_pca_coordinates.csv
experiments/2026-06-15_risk_uncertainty/: README.md  run_experiment.py
experiments/2026-06-15_risk_uncertainty/outputs/: metrics.csv
experiments/2026-06-15_rule_viz/: README.md  run_experiment.py
experiments/2026-06-18_weak_features_sample_size/: config.yaml  plan.md  run_experiment.py
experiments/2026-06-22_positives_weak_features/: config.yaml  run_experiment.py
experiments/2026-06-23_catboost_leaf_embeddings/: notebook.ipynb  report.md  run_experiment.py
experiments/2026-06-23_weak_features_beta/: config.yaml  plan.md  run_experiment.py
experiments/2026-07-01_noisy_label_catboost/: report.md  run_experiment.py
experiments/2026-07-02_leaf_embedding_ranking/: run_experiment.py
experiments/2026-07-02_spread_score/: report.md  run_experiment.py
experiments/2026-07-21_imbalanced_classification/: README.md  config.yaml
experiments/2026-07-22_leaf_embedding_umap/: report.md  run_experiment.py
experiments/catboost_blob_hyperparams/: report.md  run_experiment.py
experiments/catboost_encoder_models/: README.md  config.yaml  report.md  run_experiment.py
experiments/catboost_leaf_embeddings/: notebook.ipynb  run_experiment.py
experiments/catboost_polynomial_regression/: run_experiment.py
experiments/embedding_pca/: run_experiment.py  site_descriptions.csv
experiments/encoder_comparison/: README.md  config.yaml  report.md  run_experiment.py
experiments/imbalanced_classification/: report.md  run_experiment.py
experiments/leaf_embedding_ranking/: run_experiment.py
experiments/leaf_embedding_umap/: report.md  run_experiment.py
experiments/noisy_label_catboost/: report.md  run_experiment.py
experiments/positives_weak_features/: config.yaml  run_experiment.py
experiments/risk_uncertainty/: README.md  run_experiment.py
experiments/roc_vs_ap/: config.yaml  run_experiment.py  run_study_feature_info.py  study_feature_info.yaml  study_imbalance.yaml
experiments/rule_viz/: README.md
experiments/spread_score/: report.md
experiments/teacher_student_soft_labels/: run_experiment.py
experiments/weak_features_beta/: plan.md
ml_elements/: NOTES.md  README.md  __init__.py  analysis.py  dgp.py  embedding_pca.py  metrics.py  models.py  objectives.py  plots.py  protocols.py  rich_logger.py  rule_viz.py  rules.py  runner.py  search.py  study.py  sweep.py  trial.py
notebooks/: _make_notebook.py  model_scores_comparison.ipynb
(+93 files in other folders)
