[project]
name = "ml-lab"
version = "0.1.0"
description = "A personal ML experimentation lab for answering quantitative questions about model behaviour."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Poincare" }]
keywords = ["machine-learning", "experimentation", "evaluation", "interpretability"]

# ── Runtime dependencies ────────────────────────────────────────────────────
# These are what `ml_elements` needs to import cleanly. Optional features
# (CatBoost, imodels, parallel runners, sentence embeddings) live under
# `[project.optional-dependencies]` so the base install stays light.
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "scipy>=1.10",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# High-capacity boosted-tree backend used by some experiments.
catboost = ["catboost>=1.2"]
# Interpretable rule/tree models (FIGS, GreedyRuleList, RuleFit).
imodels = ["imodels>=2.0"]
# Parallel Study execution and rich progress bars.
viz = [
    "joblib>=1.3",
    "rich>=13.0",
]
# Sentence-embedding experiment (experiments/embedding_pca).
embedding = ["sentence-transformers>=2.2"]
# UMAP dimensionality reduction for leaf-embedding visualisation.
umap = ["umap-learn>=0.5"]
# Columnar output for the teacher/student soft-label experiment.
parquet = ["pyarrow>=14.0"]
# Convenience aggregator: install everything.
all = [
    "catboost>=1.2",
    "imodels>=2.0",
    "joblib>=1.3",
    "pyarrow>=14.0",
    "rich>=13.0",
    "sentence-transformers>=2.2",
    "umap-learn>=0.5",
]

[project.urls]
Repository = "https://github.com/poincare/ml-lab"

# ── Build system ────────────────────────────────────────────────────────────
# ml_elements/ is a real, importable package. We use hatchling so the project
# is `uv pip install -e .`-able and `import ml_elements` works from anywhere.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ml_elements"]

[tool.hatch.build.targets.sdist]
include = [
    "ml_elements",
    "experiments",
    "docs",
    "README.md",
    "Makefile",
]

# ── uv ──────────────────────────────────────────────────────────────────────
# Pin the project to the Python line we test on. `uv sync` will fetch a
# compatible interpreter if the system one doesn't match.
[tool.uv]
package = true

# Keep dev tooling out of the runtime dep set.
[dependency-groups]
dev = [
    "ruff>=0.5",
    "ipykernel>=6.0",
    "ipywidgets>=8.0",
]

# ── Ruff ────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
